# atomflare_web

./: .gitignore  README.MD  README.md  alembic.ini  createdb.py  main.py  pyproject.toml  pytest.ini  requierements_dev.txt  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  tests.http  tox.ini
.github/workflows/: flake8-mypy-build.yaml  test.yaml
alembic/: env.py
alembic/versions/: 16518e96afe1_added_column_test_mig_to_service_table.py  6d18dca54d81_added_column_test_mig_to_service_table.py  7dae0f94240b_added_column_test_mig_to_service_table.py  dde3dfa79c4a_remove_a_column_for_testing_migrations.py  e51124102a7a_added_a_column_for_testing_migrations.py
auth/: dependencies.py  tokens.py
dal/: service.py  user.py
models/: image.py  service.py  user.py
redis/: config.py  service.py  user.py
routers/: auths.py  images.py  services.py  users.py
sql/: database.py  sqlmodels.py
sql/dal/: image.py  service.py  user.py
src/app/: main.py
src/app/routers/: users.py
src/hub/: createdb.py  main.py
src/hub.egg-info/: PKG-INFO  SOURCES.txt
src/hub/alembic/: env.py
src/hub/alembic/versions/: dde3dfa79c4a_remove_a_column_for_testing_migrations.py  e51124102a7a_added_a_column_for_testing_migrations.py
src/hub/auth/: dependencies.py  tokens.py
src/hub/dal/: dependencies.py  service.py  user.py
src/hub/models/: service.py  user.py
src/hub/redis/: config.py  service.py  user.py
src/hub/routers/: auths.py  services.py  users.py
src/hub/sql/: database.py  sqlmodels.py
src/sql/: database.py
src/www/: .gitignore
src/www/auth/: tokens.py
src/www/dal/: user.py
src/www/redis/: config.py
src/www/sql/: sqlmodels.py
test/: dump.py  dump2.py  tests.http
tests/: test.http  test_core.py  test_units.py  tests.http
