[tox:tox]
minversion = 3.25.0
envlist = py36, py37, py38, py39, flake8, mypy
isolated_build = true
skip_missing_interpreters = true

[gh-actions]
python = 
    3.6: py36, mypy, flake8
    3.7: py37
    3.8: py38
    3.9: py39

[testenv]
setenv = 
    PYTHONPATH = {toxinidir}
deps = 
    -r{toxinidir}/requirements_dev.txt
commands = 
    pytest --basetemp={envtmpdir}

[testenv:flake8]
basepython = python3.9
deps = flake8
commands = flake8 src

[testenv:mypy]
basepython = python3.9
deps = 
    -r{toxinidir}/requirements_dev.txt
commands = mypy src

[metadata]
name = hub
version = 0.0.1
author = Yassine Nacif
author_email = nacifyas@gmail.com
description = Atomflare hub edition
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nacifyas/atomflare_web
project_urls =
    Bug Tracker = https://github.com/nacifyas/atomflare_web/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
