[tox:tox]
minversion = 3.25.0

[metadata]
name = hub
version = 0.0.1
author = Yassine Nacif
author_email = nacifyas@gmail.com
description = Atomflare hub edition
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nacifyas/atomflare_web
project_urls =
    Bug Tracker = https://github.com/nacifyas/atomflare_web/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
